hex format for sketches and bloom filters